# ave-actors

./: .gitignore  Cargo.toml  README.md
actor/: Cargo.toml  README.md
actor/src/: actor.rs  error.rs  handler.rs  into_actor.rs  lib.rs  path.rs  retries.rs  runner.rs  sink.rs  supervision.rs  system.rs
actor/src/helpers/: encrypted_key.rs  mod.rs
actor/tests/: actor_edge_cases.rs  integration_test.rs  lifecycle_stress_tests.rs  path_concurrent_tests.rs  restart_regression_tests.rs  sink_handler_tests.rs
databases/rocksdb_db/: Cargo.toml  README.md
databases/rocksdb_db/src/: db.rs  lib.rs  rocksdb.rs
databases/rocksdb_db/tests/: rocksdb_simple_tests.rs
databases/sqlite_db/: Cargo.toml  README.md
databases/sqlite_db/src/: db.rs  lib.rs  sqlite.rs
databases/sqlite_db/tests/: sqlite_simple_tests.rs
src/: lib.rs
store/: Cargo.toml  README.md
store/src/: config.rs  database.rs  error.rs  lib.rs  memory.rs  store.rs
store/tests/: actor_creation_matrix.rs  counter_tests.rs  debug_persistence_counters.rs  full_persistence_duplication_bug.rs  full_persistence_first_stop_bug.rs  full_persistence_no_recovery_bug.rs  full_persistence_no_snapshot_bug.rs  full_persistence_path_mismatch_bug.rs  full_persistence_single_event_bug.rs  investigate_last_event_number.rs  light_persistence_duplication_bug.rs  persistence_regression_tests.rs  root_cause_analysis.rs  store_edge_cases.rs  test_trait_exclusion.rs
