[package]
name = "ave-actors"
version = "0.6.6"
edition = "2024"
authors = ["Averiun Ledger, SL <info@averiun.com>"]
description = "Ave actor model"
readme = "README.md"
homepage = "https://www.averiun.com"
repository = "https://github.com/Averiun-Ledger/ave-actors"
rust-version = "1.90.0"

[dependencies]
actor = { path = "actor" }
store = { path = "store" }
rocksdb_db = { path = "databases/rocksdb_db", optional = true}
sqlite_db = { path = "databases/sqlite_db", optional = true }

[features]
default = ["sqlite"]
all = ["sqlite", "rocksdb"]
rocksdb = ["rocksdb_db"]
sqlite = ["sqlite_db"]

[workspace]
members = [
    "actor",
    "store",
    "databases/rocksdb_db",
    "databases/sqlite_db",
]
default-members = [
    ".",
    "actor",
    "store",
    "databases/rocksdb_db",
    "databases/sqlite_db",
]

resolver = "2"

[workspace.package]
version = "0.6.6"
edition = "2024"
rust-version = "1.90.0"

[workspace.dependencies]
zeroize = "1.8"
memsecurity = { version = "3.5", features = ["encryption"] }
async-trait = { version = "0.1.89" }
borsh = { version = "1.6.0", features = ["derive"] }
futures =  { version = "0.3.31", features = ["async-await"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.22.0"
thiserror = { version = "2.0.16" }
tokio = { version = "1.47.1" }
tokio-util = { version = "0.7.16" }
tracing ={ version = "0.1.43" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-test = "0.2"
