[package]
name = "ave-actors"
version = "0.11.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Averiun Ledger, SL <info@averiun.com>"]
description = "Ave actor model"
readme = "README.md"
homepage = "https://averiun.com"
license = "Apache-2.0"
keywords = ["traceability", "actor-system", "Averiun", "sustainability"]
repository = "https://github.com/Averiun-Ledger/ave-actors"

[dependencies]
ave-actors-actor = { path = "actor", version = "0.4.0" }
ave-actors-store = { path = "store", version = "0.4.0" }
ave-actors-rocksdb = { path = "databases/rocksdb_db", version = "0.3.0", optional = true}
ave-actors-sqlite = { path = "databases/sqlite_db", version = "0.5.0", optional = true }

[features]
default = ["sqlite"]
rocksdb = ["ave-actors-rocksdb/rocksdb"]
export-rocksdb = ["ave-actors-rocksdb/export-rocksdb"]
sqlite = ["ave-actors-sqlite/sqlite"]
export-sqlite = ["ave-actors-sqlite/export-sqlite"]


[workspace]
members = [
    "actor",
    "store",
    "databases/rocksdb_db",
    "databases/sqlite_db",
]
default-members = [
    ".",
    "actor",
    "store",
    "databases/rocksdb_db",
    "databases/sqlite_db",
]

resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.90.0"
authors = ["Averiun Ledger, SL <info@averiun.com>"]
description = "Ave actor model"
readme = "README.md"
homepage = "https://averiun.com"
license = "Apache-2.0"
keywords = ["traceability", "actor-system", "Averiun", "sustainability"]
repository = "https://github.com/Averiun-Ledger/ave-actors"

[workspace.dependencies]
ave-actors-actor = { path = "actor", version = "0.4.0"}
ave-actors-store = { path = "store", version = "0.4.0" }
ave-actors-rocksdb = { path = "databases/rocksdb_db", version = "0.3.0"}
ave-actors-sqlite = { path = "databases/sqlite_db", version = "0.5.0"}
zeroize = "1.8.2"
memsecurity = { version = "3.5.2", features = ["encryption"] }
async-trait = { version = "0.1.89" }
borsh = { version = "1.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
thiserror = { version = "2.0.18" }
tokio = { version = "1.50.0" }
tokio-util = { version = "0.7.18" }
tracing ={ version = "0.1.44" }
tracing-test = "0.2.6"
test-log = {version = "0.2.19", features = ["trace"] }
