[package]
name = "ave-actors-actor"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
memsecurity = { workspace = true }
zeroize = { workspace = true }
async-trait = { workspace = true }
borsh = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-test = { workspace = true }
