[package]
name = "store"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
actor = { path = "../actor" }
async-trait = { workspace = true }
borsh = { workspace = true }
chacha20poly1305 = "0.10"
zeroize = { workspace = true }
memsecurity = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
tokio-util = { workspace = true }
