[package]
name = "ave-actors-store"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
ave-actors-actor = { workspace = true}
async-trait = { workspace = true }
borsh = { workspace = true }
chacha20poly1305 = "0.10.1"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
test-log = { workspace = true }
