[package]
name = "rocksdb_db"
version = { workspace = true}
edition = { workspace = true}


[dependencies]
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf"] }
num_cpus = "1.16"
store = { path = "../../store" }
tracing = {workspace = true }

[dev-dependencies]
tempfile = {workspace = true }
