[package]
name = "ave-actors-rocksdb"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf"] }
num_cpus = "1.16"
ave-actors-store = { workspace = true }
tracing = {workspace = true }

[dev-dependencies]
ave-actors-rocksdb = { path = ".", features = ["rocksdb"]}
tempfile = {workspace = true }

[features]
rocksdb = []
export-rocksdb = []