[package]
name = "ave-actors-sqlite"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"]}
num_cpus = "1.16"
ave-actors-store = { workspace = true }
tracing = {workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
tempfile = {workspace = true }
ave-actors-sqlite = { path = ".", features = ["sqlite"]}


[features]
sqlite = []
export-sqlite = []