[package]
name = "ave-actors-sqlite"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"]}
ave-actors-store = { workspace = true }
tracing = {workspace = true }

[dev-dependencies]
tempfile = {workspace = true }
ave-actors-sqlite = { path = ".", features = ["sqlite"]}


[features]
sqlite = []
export-sqlite = []
